Improved image SSI and CSS to not have fixed width, improving useability on mobile.

--- a/website/homestyles.css
+++ b/website/homestyles.css
@@ -108,6 +108,8 @@
     margin: 3px;
     border: 4px solid #230404;
     border-radius: 12px;
+    width:100%;
+    max-width:300px;
     object-fit: cover;
  }
  
